[gd_scene load_steps=11 format=4 uid="uid://bckmbhdapbq20"]

[ext_resource type="Script" uid="uid://c1ld56rbpl8mo" path="res://2d/platformer_controller/platformer_controller.gd" id="1_5ijb2"]
[ext_resource type="Texture2D" uid="uid://byv2msrdiiarx" path="res://2d/assets/Player.svg" id="2_ysht8"]
[ext_resource type="Texture2D" uid="uid://djyvupg711utp" path="res://2d/assets/Tileset.png" id="3_0h3nv"]
[ext_resource type="Script" uid="uid://cut8ogkfxlln4" path="res://2d/pickup_object/object.gd" id="4_ysht8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdkv3"]
size = Vector2(78, 78)

[sub_resource type="CircleShape2D" id="CircleShape2D_0h3nv"]
radius = 216.33308

[sub_resource type="SphereMesh" id="SphereMesh_5ijb2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysht8"]
radius = 22.135944

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kbeh5"]
texture = ExtResource("3_0h3nv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_4mqy2"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Ground"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_kbeh5")

[node name="PickupObject" type="Node2D"]

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(330, 300)
script = ExtResource("1_5ijb2")
jump_force = 600.0
gravity = 1500.0
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Player"]
texture = ExtResource("2_ysht8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_mdkv3")

[node name="Range" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Range"]
shape = SubResource("CircleShape2D_0h3nv")

[node name="HandPosition" type="Marker2D" parent="Player"]
position = Vector2(0, -76)

[node name="Pickable" type="CharacterBody2D" parent="."]
position = Vector2(815, 436)
script = ExtResource("4_ysht8")
metadata/_edit_group_ = true

[node name="MeshInstance2D" type="MeshInstance2D" parent="Pickable"]
scale = Vector2(42.500008, 42.500008)
mesh = SubResource("SphereMesh_5ijb2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Pickable"]
shape = SubResource("CircleShape2D_ysht8")

[node name="Ground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAARAAkAAAACAAIAAAARAAgAAAACAAEAAAARAAcAAAACAAEAAAARAAYAAAACAAEAAAARAAUAAAACAAEAAAARAAQAAAACAAEAAAARAAMAAAACAAEAAAARAAIAAAACAAEAAAARAAEAAAACAAEAAAARAAAAAAACAAAAAAAQAAkAAAABAAIAAAAQAAgAAAABAAEAAAAQAAcAAAAAAAEAAAAQAAYAAAAAAAEAAAAQAAUAAAAAAAEAAAAQAAQAAAAAAAEAAAAQAAMAAAAAAAEAAAAQAAIAAAAAAAEAAAAQAAEAAAABAAEAAAAQAAAAAAABAAAAAAAPAAkAAAABAAIAAAAPAAgAAAABAAAAAAAPAAEAAAABAAIAAAAPAAAAAAABAAAAAAAOAAkAAAABAAIAAAAOAAgAAAABAAAAAAAOAAEAAAABAAIAAAAOAAAAAAABAAAAAAANAAkAAAABAAIAAAANAAgAAAABAAAAAAANAAEAAAABAAIAAAANAAAAAAABAAAAAAAMAAkAAAABAAIAAAAMAAgAAAABAAAAAAAMAAEAAAABAAIAAAAMAAAAAAABAAAAAAALAAkAAAABAAIAAAALAAgAAAABAAAAAAALAAEAAAABAAIAAAALAAAAAAABAAAAAAAKAAkAAAABAAIAAAAKAAgAAAABAAAAAAAKAAEAAAABAAIAAAAKAAAAAAABAAAAAAAJAAkAAAABAAIAAAAJAAgAAAABAAAAAAAJAAEAAAABAAIAAAAJAAAAAAABAAAAAAAIAAkAAAABAAIAAAAIAAgAAAABAAAAAAAIAAEAAAABAAIAAAAIAAAAAAABAAAAAAAHAAkAAAABAAIAAAAHAAgAAAABAAAAAAAHAAEAAAABAAIAAAAHAAAAAAABAAAAAAAGAAkAAAABAAIAAAAGAAgAAAABAAAAAAAGAAEAAAABAAIAAAAGAAAAAAABAAAAAAAFAAkAAAABAAIAAAAFAAgAAAABAAAAAAAFAAEAAAABAAIAAAAFAAAAAAABAAAAAAAEAAkAAAABAAIAAAAEAAgAAAABAAAAAAAEAAEAAAABAAIAAAAEAAAAAAABAAAAAAADAAkAAAABAAIAAAADAAgAAAABAAAAAAADAAEAAAABAAIAAAADAAAAAAABAAAAAAACAAkAAAABAAIAAAACAAgAAAABAAAAAAACAAEAAAABAAIAAAACAAAAAAABAAAAAAABAAkAAAABAAIAAAABAAgAAAABAAEAAAABAAcAAAACAAEAAAABAAYAAAACAAEAAAABAAUAAAACAAEAAAABAAQAAAACAAEAAAABAAMAAAACAAEAAAABAAIAAAACAAEAAAABAAEAAAABAAEAAAABAAAAAAABAAAAAAAAAAkAAAAAAAIAAAAAAAgAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAMAAAAAAAEAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAAAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_4mqy2")

[connection signal="body_entered" from="Player/Range" to="Player" method="_on_range_body_entered"]
[connection signal="body_exited" from="Player/Range" to="Player" method="_on_range_body_exited"]
